--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap");
+body {
+  font-family: "Poppins", sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  background: #000;
+}
+.loginimg {
+  width: 70px;
+  margin-bottom: 40px;
+}
+.inner {
+  box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 40px 70px;
+  border-radius: 10px;
+  background: #f1f1f7cc;
+  backdrop-filter: blur(20px);
+}
+.logintitle {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 40px;
+}
+.inputs {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.loginsvg svg {
+  height: 20px;
+  color: #818181;
+  transition: 0.3s ease-in-out;
+}
+.loginsvg {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 15px;
+  border: 1px solid #818181;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+.loginsvg input {
+  border: none;
+  outline: none;
+  background: none;
+  transition: 0.3s ease-in-out;
+}
+.loginsvg input:focus ~ svg {
+  color: #000;
+}
+.loginsvg input:focus {
+  border-color: #000;
+}
+.inputs label {
+  margin-bottom: 10px;
+  color: #818181;
+}
+.form button {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #000;
+  background: #000;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  color: #fff;
+  border-radius: 4px;
+  margin: 20px 0px;
+  transition: 0.3s ease-in-out;
+}
+.form button:hover {
+  background: transparent;
+  color: #000;
+}
+.inner a {
+  text-transform: capitalize;
+  text-decoration: none;
+  color: #000;
+  transition: 0.3s ease-in-out;
+}
+.inner a:hover {
+  text-decoration: underline;
+}
+.loading {
+  width: 100%;
+  height: 100vh;
+  background: #ffffffc3;
+  position: fixed;
+  top: 0;
+  z-index: 50;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 768px) {
+  .inner {
+    padding: 40px 50px;
   }
-  to {
-    transform: rotate(360deg);
+  .main {
+    height: 100vh;
+    padding: 50px 0px;
+  }
+  .loading {
+    height: 100%;
   }
 }
